samples/_failures_safe/1761724629_3601d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9ee088b.c: In function ‘main’:
./samples/SAFE/__tmp_e9ee088b.c:164:26: error: missing terminating " character
  164 |     input[strcspn(input, "\n
      |                          ^~~
./samples/SAFE/__tmp_e9ee088b.c:164:5: error: expected expression at end of input
  164 |     input[strcspn(input, "\n
      |     ^~~~~
./samples/SAFE/__tmp_e9ee088b.c:164:5: error: expected declaration or statement at end of input
